tests/errors/surf_lib_20.ki
# statistics.mean of an empty data set must throw.
var s = import("statistics")
discard s.mean([])
